added rudimentary trade store + fetch mechanics

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ license = UNLICENSE
 [options]
 packages = find:
 install_requires =
+    automata.core==0.0.3
+    automata.utilities==0.0.2
     automata.redis==0.0.2
 
 [options.packages.find]
