--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,25 @@
 [metadata]
-name = automata.trade.executor
-version = 0.0.2
+name = persuader-technology-automata-trade-executor
+version = 0.0.3
 description = Automata Trade Executor
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Persuader Technology
+author_email = software@persuader.technology
 license = UNLICENSE
+classifiers =
+    Programming Language :: Python :: 3
 
 [options]
 packages = find:
 install_requires =
-    automata.core==0.0.4
-    automata.utilities>=0.0.3
-    automata.redis==0.0.2
+    persuader-technology-automata-core==0.0.7
+    persuader-technology-automata-utilities==0.0.5
+    persuader-technology-automata-redis==0.0.3
 
 [options.packages.find]
 include = trade*
 exclude =
     tests
     simulations
+    .scripts
