--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = persuader-technology-automata-trade-executor
-version = 0.0.3
+version = 0.0.4
 description = Automata Trade Executor
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -13,9 +13,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    persuader-technology-automata-core==0.0.7
-    persuader-technology-automata-utilities==0.0.5
-    persuader-technology-automata-redis==0.0.3
+    persuader-technology-automata-redis>=0.1.0
 
 [options.packages.find]
 include = trade*
